Fix subscribe box cutoffs on mobile take 2

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,18 +9,16 @@
   .subscribe-block {
     padding-right: 0;
   }
-}
-@media all and (max-width: 400px) {
   .subscribe-block {
-    width: 100%;
+    width: 100% !important;
     padding: 0 10px;
   }
 
   .subscribe-block .mc-field-group {
-    width: 100%;
+    width: 100% !important;
   }
   .up-next-block {
-    width: 100%;
+    width: 100% !important;
     padding: 0 10px;
   }
 }
